--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,9 @@
-sites:
   - name: books
     url: https://books.toscrape.com/
     parser: books
-    output_format: csv
+    output_format: json
 
-  # - name: quotes
-  #   url: https://quotes.toscrape.com/
-  #   parser: quotes
-  #   output_format: csv
+  - name: quotes
+    url: https://quotes.toscrape.com/
+    parser: quotes
+    output_format: json
